--- a/views/banned.pug
+++ b/views/banned.pug
@@ -4,7 +4,7 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    title PoW-Guard
+    title PoW Shield
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/javascripts/bundle.min.js')
   body
